@@ -1,0 +1,8 @@
+Static Info Tables (pl)
+
+This extension provides Polish language pack for the Static Info Tables 
+providing localized names for countries, zones, currencies and so on.
+
+Homepage: http://forge.typo3.org/projects/extension-static_info_tables_pl
+Support: http://forge.typo3.org/projects/extension-static_info_tables_pl/wiki
+Bugtracker: http://forge.typo3.org/projects/extension-static_info_tables_pl/issues
